added Chuck's revisions

--- a/guidelinesWP/04-chap4.Rmd
+++ b/guidelinesWP/04-chap4.Rmd
@@ -83,13 +83,13 @@ For this case study, we further demonstrated the approach of averaging over stru
 ## WESTCOAST VANCOUVER ISLAND CHINOOK
 
 
-The West Coast of Vancouver Island (WCVI) Chinook SMU is comprised of 3 CUs [@holtbyConservationUnitsPacific2007], 7 large inlets (or sounds), and 20 indicators stocks, which are stocks with relatively complete time-series of spawner abundances with consistent observation methodology [@riddellReview2001Chinook2002]. Hatchery enhancement is an important component of many of these stocks and only indicator stocks without significant enhancement (PNI $\geqslant$ 0.5) were included in our analyses.  Because times-series of the proportion of hatchery-origin spawners are not available for these stocks, total spawner abundances were used in the assessment of CU and aggregate SMU level statuses, which may results in overly optimistic assessments of status relative to if hatchery-origin fish were excluded (as in Interior Fraser River Coho case study). Spawner abundances tend to be positively correlated among inlets, with an average correlation of 0.28 (Figure \@ref(fig:density-cor-plot)).
+The West Coast of Vancouver Island (WCVI) Chinook SMU consists of 3 CUs [@holtbyConservationUnitsPacific2007], 7 large inlets (or sounds), and 20 escapement indicators stocks, which are stocks with relatively complete time-series of spawner abundances with consistent observation methodology [@riddellReview2001Chinook2002; @pacificsalmoncommissionPacificSalmonCommission2018]. Hatchery enhancement is an substantial component of many of these stocks and only escapement indicator stocks without significant enhancement (PNI $\geqslant$ 0.5) were included in our analyses.  Because times-series of the proportion of hatchery-origin spawners are not available for these stocks, total spawner abundances were used in the assessment of CU and aggregate SMU level statuses, which may results in overly optimistic assessments of status relative to if hatchery-origin fish were excluded (as in Interior Fraser River Coho case study). Spawner abundances tend to be positively correlated among inlets, with an average correlation of 0.28 (Figure \@ref(fig:density-cor-plot)).
 
 
-Under the WSP, CUs are identified at a spatial scale to conserve for long-term sustainability of the species [@holtbyConservationUnitsPacific2007]. For WCVI Chinook, inlets nested within CUs are important spatial scale of diversity for sustainability given geographic separation of spawning habitats among inlets and limited straying among inlets (D. McHugh pers. comm. DFO South Coast Stock Assessment). We considered spawner abundances at the scale of inlets within CUs because of limited demographic exchange between these units.
+Under the WSP, CUs are identified at a spatial scale to conserve for long-term sustainability of the species [@holtbyConservationUnitsPacific2007]. For WCVI Chinook, inlets nested within CUs are important spatial scale of diversity for sustainability given geographic separation of spawning habitats among inlets and limited straying among inlets (D. McHugh pers. comm. DFO South Coast Stock Assessment). We considered spawner abundances at the scale of inlets within CUs because of limited demographic exchange between these locations.
 
 
-Two of the 3 CUs in this SMU, WCVI-South and WCVI-Nootka & Kyuquot, were assessed as 'red' status in an integrated Wild Salmon Policy assessment [@dfoIntegratedBiologicalStatus2016].  WCVI Chinook was identified as a stock of concern in the 2021 Integrated Fisheries Management Plan, IFMP and a rebuilding plan is under development [@dfoIntegratedFisheriesManagement2021]. Poor marine survival rates for WCVI Chinook and low spawner levels over the past 2 decades are highlighted as reasons for conservation concern in the IFMP [@dfoIntegratedFisheriesManagement2021, p. 129]. 
+Two of the 3 CUs in this SMU, WCVI-South and WCVI-Nootka & Kyuquot, were assessed as 'red' status in an integrated Wild Salmon Policy assessment [@dfoIntegratedBiologicalStatus2016].  WCVI Chinook was identified as a stock of concern in the 2021 Integrated Fisheries Management Plan, IFMP and a rebuilding plan is under development [@dfoIntegratedFisheriesManagement2021]. Poor smolt-to-age-2 survival rates for WCVI Chinook and low spawner levels over the past 2 decades are highlighted as reasons for conservation concern in the IFMP [@dfoIntegratedFisheriesManagement2021, p. 129]. 
 
 Biological benchmarks have been estimated for WCVI indicator stocks using an empirical relationship between watershed area and common stock-recruitment biological benchmarks, spawner abundances at replacement, S~REP~, and S~MSY~, from a meta-analysis of 25 Chinook stocks across North America [@parkenHabitatbasedMethodsEstimate2006]. Lack of rigorous recruitment data for WCVI Chinook stocks precludes the use of stock-recruitment based benchmarks. For the development of LRPs for WCVI Chinook, the empirical relationship between watershed area and S~REP~ was re-estimated using a hierarchical Bayesian model [as in @liermannUsingAccessibleWatershed2010], and applied to inlets of WCVI Chinook. 
 
@@ -100,12 +100,12 @@ In this case study, we found that status was consistent across the LRP methods t
 
 ## INSIDE SOUTH COAST CHUM - NON-FRASER
 
-The Inside South Coast Chum - Non-Fraser SMU (hereafter ISC Chum) includes seven CUs of chum salmon from rivers that drain into Johnstone Strait and the Salish Sea along the mainland of British Columbia and the east coast of Vancouver Island. Chum salmon CUs spawning in the Fraser River watershed are not included in this SMU. They have been categorized as a separate Inside South Coast Chum - Fraser SMU. While these two SMUs have substantial overlap in ocean fisheries, they have been separated into two SMUs based on differences in terminal fishery impacts and freshwater habitats. @godboutStockStatusWild2004 identified variable but stable status in the central and southern portion of the SMU, with declines in the north, especially in the region defined by Southern Coastal Streams CU. @holtEvaluatingBenchmarksBiological2018 found similar results in a provisional assessment of status.  Spawner abundances tend to be only very weakly correlated among CUs for this SMU, with an average correlation of 0.12 (Figure \@ref(fig:density-cor-plot)). 
+The Inside South Coast Chum - Non-Fraser SMU (hereafter ISC Chum) includes seven CUs of chum salmon from rivers that drain into Johnstone Strait and the Salish Sea along the mainland of British Columbia and the east coast of Vancouver Island. Chum salmon CUs spawning in the Fraser River watershed are excluded from this SMU. They have been categorized as a separate Inside South Coast Chum - Fraser SMU. While these two SMUs have substantial overlap in ocean fisheries, they have been separated into two SMUs based on differences in terminal fishery impacts and freshwater habitats. @godboutStockStatusWild2004 identified variable but stable status in the central and southern portion of the SMU, with declines in the north, especially in the region defined by Southern Coastal Streams CU. @holtEvaluatingBenchmarksBiological2018 found similar results in a provisional assessment of status.  Spawner abundances tend to be only very weakly correlated among CUs for this SMU, with an average correlation of 0.12 (Figure \@ref(fig:density-cor-plot)). 
 
 The ISC Chum SMU is considered data-limited. While escapement series are available for many streams starting in 1953, several series are incomplete and require infilling assumptions. The quality of recruitment data is not sufficient to reliably estimate parameters from stock-recruit relationships and use those estimates as benchmarks. Instead, benchmarks were calculated as a percentile of the historical CU-level spawner abundance time series (percentile benchmarks) to inform WSP status, as recommended by @holtEvaluatingBenchmarksBiological2018. We removed three hatchery-dominated systems from the Georgia Strait CU (PNI $<<$0.5). The remaining systems had little or no hatchery enhancement (PNI likely $>$0.72)<!-- LW: definitely want to check with Pieter Van Will on this and skim that report from SEP-->. Where available, hatchery-origin spawners were removed from total spawner abundances. <!--CH: I revised this to better match the ISC chum chapter, after discussion with Luke on Dec. 15-->
 
 For this case study, we consider two approaches for characterizing CU status: (1) the Pacific Salmon Status Scanner and (2) a single-metric on spawner abundances using percentile-based benchmarks. We applied both the proportion-based LRP and logistic-regression based LRPs to this case study and evaluated the sensitivity of SMU-level status from proportion-based LRPs to various data inputs. Because of poor fit of the logistic regression as shown by model diagnostics, were we not able to generate reliable logistic regression-based LRPs for this SMU.
 
 
-We found that assessments based on the Pacific Salmon Status Scanner gave identical results as the single-metric on spawner abundances relative to percentile-based benchmarks. Also, as for Inner Fraser River Coho Salmon, increasing the number of CUs included in analyses resulted in more pessimistic statuses relative to the LRP, never more optimistic. Further, the case study demonstrates that SMU status can be below the LRP even if the aggregate abundances are increasing.
+We found that assessments based on the Pacific Salmon Status Scanner gave identical results as the single-metric on spawner abundances relative to percentile-based benchmarks. Also, as for Interior Fraser River Coho, increasing the number of CUs included in analyses resulted in more pessimistic statuses relative to the LRP, never more optimistic. Further, the case study demonstrates that SMU status can be below the LRP even if the aggregate abundances are increasing.
 
