Edits to case study paper

--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -18,6 +18,12 @@ WSP CUs have been identified for Interior Fraser Coho based on genetics and geog
 knitr::include_graphics("figure/coho-map.png")
 ```
 
+<!-- Comment from Chuck: Please note that this map does not align with the text.  The text talks about how the IFC are upstream of Hell’s Gate but this map includes rivers that are downstream of that, including rivers that are downstream of Hope. Can the map be corrected to align with the text? If not then please identify this discrepancy in the map caption. 
+o	My question for Luke: What is the source of these files?  Does Fraser Canyon CU include streams downstream of Hell’s Gate?  If so, maybe text should be revised???
+Also - for me to do: confirm CU designation in Holtby and Circuna -->
+
+
+
 +-------------------+--------------------------------+
 | Conservation Unit | Sub-populations                  
 +===================+================================+
@@ -49,7 +55,7 @@ Interior Fraser Coho is included in the first batch of major stocks proposed for
 
 Declines in Interior Fraser Coho spawner abundance throughout the 1990’s led to a suite of management actions to promote recovery, including significant fishery restrictions starting in 1998 [@deckerAssessmentInteriorFraser2014]. Evidence of a new, lower productivity regime starting in return year 1994 that coincides with declines in spawner abundances has been well documented [@deckerAssessmentInteriorFraser2014]. In 2002, the Interior Fraser Coho stock management unit was designated 'endangered' by the  Committee on the Status of Endangered Wildlife in Canada (COSEWIC) based on the stock unit being assessed as a single 'Designatable Unit' (DU).  
 
-Subsequent work by the Interior Fraser Coho Recovery Team (IFCRT) led to a conservation strategy outlining short-term and long-term recovery objectives for the management unit [@ifcrtConservationStrategyCoho2006]. In 2014, @deckerAssessmentInteriorFraser2014 assessed status relative to the 2006 IFCRT objectives, and concluded that Interior Fraser Coho had been above the short-term recovery target in every year since 2008, and above the long-term recovery target in the most recent two return years (2012 and 2013). Also in 2014, Interior Fraser Coho were assessed under the framework of DFO’s Wild Salmon Policy (WSP). The WSP Integrated Status Assessment classified three of these CUs as being amber status (Middle Fraser, Fraser Canyon, South Thompson) and the remaining two CUs as amber/green status [Lower Thompson, North Thompson, @dfoWildSalmonPolicy2015]. As part of the WSP assessment, S\textsubscript{gen} was estimated for each CU and used as one of several benchmarks considered when assigning integrated CU status. A subsequent COSEWIC assessment in 2016 upgraded the status assessment for the Interior Fraser Coho DU from 'endangered' to 'threatened' [@cosewicCOSEWICAssessmentStatus2016]. In 2018, DFO undertook a Recovery Potential Assessment (RPA) for Interior Fraser Coho that described status, habitat, threats, limiting factors to recovery, candidate recovery targets, and abundance projections for the DU, as well as recommendations regarding mitigation and allowable harm [@arbeiderInteriorFraserCoho2020]. 
+Subsequent work by the Interior Fraser Coho Recovery Team (IFCRT) led to a conservation strategy outlining short-term and long-term recovery objectives for the management unit [@ifcrtConservationStrategyCoho2006]. In 2014, @deckerAssessmentInteriorFraser2014 assessed status relative to the 2006 IFCRT objectives, and concluded that Interior Fraser Coho had been above the short-term recovery target in every year since 2008, and above the long-term recovery target in the most recent two return years (2012 and 2013). Also in 2014, Interior Fraser Coho were assessed under the framework of DFO’s Wild Salmon Policy (WSP). The WSP Integrated Status Assessment classified three of these CUs as being amber status (Middle Fraser, Fraser Canyon, South Thompson) and the remaining two CUs as amber/green status [Lower Thompson, North Thompson, @dfoWildSalmonPolicy2015]. As part of the WSP assessment, S~gen~ and S~MSY~ were estimated for each CU and used along with other benchmarks when assigning integrated CU status. A subsequent COSEWIC assessment in 2016 upgraded the status assessment for the Interior Fraser Coho DU from 'endangered' to 'threatened' [@cosewicCOSEWICAssessmentStatus2016]. In 2018, DFO undertook a Recovery Potential Assessment (RPA) for Interior Fraser Coho that described status, habitat, threats, limiting factors to recovery, candidate recovery targets, and abundance projections for the DU, as well as recommendations regarding mitigation and allowable harm [@arbeiderInteriorFraserCoho2020]. 
 
 ### History of aggregate-abundance based reference points
 
@@ -58,7 +64,7 @@ Interior Fraser Coho show a strong positive relationship between their spatial d
 
 ### Similarity Among CUs
 
-We considered the 4 criteria identified in Holt et al. (in prep) to evaluate if status of any one CU within this SMU could be inferred from the remaining CUs; these criteria included similarity in (i) threats, (ii) environmental conditions and drivers, (iii) life history and (iv) population capacity. Although statuses are available for all CUs in this SMU, evaluation against these four criteria can inform the extent to which we would expect status against LRPs to be sensitive to omission of CUs. We also used sensivity analyses, presented below, to explore how removing one or two CUs affected LRP estimation and status assessments against the LRP.
+We considered the 4 criteria identified in Holt et al. (in prep) to evaluate if status of any one CU within this SMU could be inferred from the remaining CUs; these criteria included similarity in (i) threats, (ii) environmental conditions and drivers, (iii) life history and (iv) population capacity. Although statuses are available for all CUs in this SMU, evaluation against these four criteria can inform the extent to which we would expect status against LRPs to be sensitive to omission of CUs. We also used sensitivity analyses, presented below, to explore how removing one or two CUs affected LRP estimation and status assessments against the LRP.
 
 In an assessment of threats for Interior Fraser Coho completed as part of the 2018 Recovery Potential Assessment, @arbeiderInteriorFraserCoho2020 ranked a comprehensive set of threats on a scale of high, medium, low, and unknown.  The dominant threats to this SMU are from activities related to forestry, forest fires, agriculture, and urban and rural development. Specific threats arising from these activities included the modification of catchment surfaces, effluents from agriculture and forestry, and linear development, which is defined as the straightening and channelization of streams [@arbeiderInteriorFraserCoho2020]. While impacts from a given activity may be higher in some CUs than others, the interconnected threats stemming from multiple activities, as well as cumulative impacts, mean that it is hard to isolate one CU that experiences threats differently than another. Furthermore,  extensive agricultural and linear development in the lower Fraser River, which all Interior Fraser Coho smolts migrate through, and a proportion of juveniles rear in, means that there is a possibility that all CUs are affected by threats stemming from agriculture and linear development.
 
