Chuck's comments on WCVI CK

--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -125,7 +125,9 @@ Following @withlerGeneticallyBasedTargets2018, we recommend including only popul
 
 
 
-@withlerGeneticallyBasedTargets2018 recommend the inclusion of integrated-wild for biological assessments under the WSP, and provisionally, integrated-transition populations (i.e., PNI  $\geqslant$ 0.5 ). Similarly, only populations with PNI values $\geqslant$ 0.5 were included in the assessment of CU and SMU status here. Stricter definitions of hatchery enhancement can be considered by including only populations with PNI values $\geqslant$ 0.72. In practice, applying this stricter threshold for our case study on Chinook Salmon resulted in excluding most data since reliable time-series of PNI values and spawner abundances are only available for exploitation-rate indicator populations where coded-wire tags have been applied and sampled for recoveries, which tend to be populations with hatcheries. Adopting a threshold of $\geqslant$ 0.5, a level associated with most fish being natural origin, was the result of a trade-off between assessing remaining CU-level biodiversity and excluding significant hatchery impacts. For some populations, early periods of high enhancement can be removed from time-series and assessments can focus on recent periods without significant enhancement [@grantEvaluationUncertaintyFraser2011]. <!--CH: do these next 2 new sentences belong here or elsewhere?--> Large interannual variability in PNI values can result from natural variability in survival of hatchery vs. natural-origin spawners, low sampling rates for hatchery-origin spawners, and high observation errors requiring decisions about temporal averaging.  Here we average over the available time series, though recommend further research quantifying the sources of uncertainties and evaluating the sensitivity of  results to various time periods for averaging (e.g., recent generation vs entire time period). In addition to guidance on biological assessments under the WSP, @withlerGeneticallyBasedTargets2018 further recommend developing biological goals for hatchery-influenced populations documenting tradeoffs between increased genetic risk to wild populations from hatchery production and increased abundance required to support other objectives.<!--CH: this last sentence is in response to Chuck's Q as to if Withler recommend actions given a PNI value, or recommend management populations to a PNI value(goal). It's both. PNI goals are supposed to be developed for all pops. But for WSP assessments, hatchery-dominated pops are removed from analyses [focus of this section]-->
+@withlerGeneticallyBasedTargets2018 recommend the inclusion of integrated-wild for biological assessments under the WSP, and provisionally, integrated-transition populations (i.e., PNI  $\geqslant$ 0.5 ). Similarly, only populations with PNI values $\geqslant$ 0.5 were included in the assessment of CU and SMU status here. Stricter definitions of hatchery enhancement can be considered by including only populations with PNI values $\geqslant$ 0.72. In practice, applying this stricter threshold for our case study on Chinook Salmon resulted in excluding most data since reliable time-series of PNI values and spawner abundances are only available for exploitation-rate indicator populations where coded-wire tags have been applied and sampled for recoveries, which tend to be populations with hatcheries. Adopting a threshold of $\geqslant$ 0.5, a level associated with most fish being natural origin, was the result of a trade-off between assessing remaining CU-level biodiversity and excluding significant hatchery impacts. For some populations, early periods of high enhancement can be removed from time-series and assessments can focus on recent periods without significant enhancement [@grantEvaluationUncertaintyFraser2011]. <!--CH: these next 2 sentences are tenative, depending on response from Brock/SEP-->We further recommend that thermal marks be used to identify the proportion of hatchery-origin spawners on the spawning grounds to derive PNI values. When data on thermal marking are not available, coded-wire tags (CWTs) can be used to identify hatchery-origin spawners, but are associated with increased uncertainty in the proportion of hatchery-origin spawners.
+
+Large interannual variability in PNI values can result from natural variability in survival of hatchery vs. natural-origin spawners, low sampling rates for hatchery-origin spawners, use of coded wire-tags instead of thermal marks, and high observation errors requiring decisions about temporal averaging.  Here we average over the available time series where hatchery objectives have remained constant, though recommend further research quantifying the sources of uncertainties and evaluating the sensitivity of results to various time periods for averaging (e.g., recent generation vs entire time period). In addition to guidance on biological assessments under the WSP, @withlerGeneticallyBasedTargets2018 further recommend developing biological goals for hatchery-influenced populations documenting tradeoffs between increased genetic risk to wild populations from hatchery production and increased abundance required to support other objectives.<!--CH: this last sentence is in response to Chuck's Q as to if Withler recommend actions given a PNI value, or recommend management populations to a PNI value(goal). It's both. PNI goals are supposed to be developed for all pops. But for WSP assessments, hatchery-dominated pops are removed from analyses [focus of this section]-->
 
 
 
