--- a/guidelinesWP/bib/refs.bib
+++ b/guidelinesWP/bib/refs.bib
@@ -163,6 +163,22 @@
   institution = {{FAO}}
 }
 
+@article{candyPatternsHomingStraying2000,
+  title = {Patterns of Homing and Straying in Southern {{British Columbia}} Coded-Wire Tagged Chinook Salmon ({{Oncorhynchus}} Tshawytscha) Populations},
+  author = {Candy, John R and Beacham, Terry D},
+  year = {2000},
+  month = jun,
+  journal = {Fisheries Research},
+  volume = {47},
+  number = {1},
+  pages = {41--56},
+  issn = {01657836},
+  doi = {10.1016/S0165-7836(99)00124-1},
+  abstract = {Chinook salmon (Oncorhynchus tshawytscha) reared in a hatchery can originate from the same river on which a hatchery is located (natal river) or from a foreign river. Non-displacement rearing occurs if juveniles originating from the same drainage as the hatchery are released back into the natal stream. Displacement rearing occurs if part of the rearing and release strategy occurs at a foreign drainage or includes the marine environment. We compared straying between non-displacement and three types of displacement releases where: (1) juveniles are transported, reared in a central hatchery and released back into natal drainage (satellite); (2) or transported, reared in a central or recipient hatchery and released in a foreign drainage (transplant); (3) or reared and released directly into the marine environment away from the home drainage (out-estuary). Compared with non-displacement rearing, displacement-reared \textregistered sh were between two and \textregistered ve times more likely to stray (2.1{$\pm$}5.3\% vs 1.2\%). Out-estuary releases had the highest stray rates of the displacement rearing types and were suspected of being least successful at imprinting on the home stream. Analysis of hybrid and transplanted stocks suggested that there was a genetic component to homing. A hybrid stock was three times more likely to stray than the natal stock released at the same time and location (6.2\% vs 2.4\%). Transplanted \textregistered sh without exposure to their ancestral drainage were more likely to stray back to the ancestral drainage than non-transplanted \textregistered sh released at the same time and location (2.9\% vs 0.1\%). Approximately 50\% of the stray migrants were recovered within 30 km of the release site, indicating that the highest risk of straying may occur during the transition from bi-coordinate navigation to imprinted natal stream clues. \# 2000 Elsevier Science B.V. All rights reserved.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\STF35PEF\\Candy and Beacham - 2000 - Patterns of homing and straying in southern Britis.pdf}
+}
+
 @article{carwardinePriorityThreatManagement2019,
   title = {Priority {{Threat Management}} for Biodiversity Conservation: {{A}} Handbook},
   shorttitle = {Priority {{Threat Management}} for Biodiversity Conservation},
@@ -368,14 +384,6 @@
   number = {2006/023}
 }
 
-@techreport{dfoHarvestStrategyCompliant2006a,
-  title = {A Harvest Strategy Compliant with the Precautionary Approach},
-  author = {DFO},
-  year = {2006},
-  number = {2006/023},
-  institution = {{Fisheries and Oceans Canada}}
-}
-
 @article{dfoIntegratedBiologicalStatus2016,
   title = {Integrated {{Biological Status}} of {{Southern British Columbia Chinook Salmon}} ({{{\emph{Oncorhynchus}}}}{\emph{ Tshawytscha}}) under the {{Wild Salmon Policy}}},
   author = {{DFO}},
@@ -415,6 +423,17 @@
   pages = {100},
   langid = {english},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\ZFZXSM8T\\Proceedings of the National Peer Review on the Dev.pdf}
+}
+
+@article{dfoProceedingsNationalPeer2016a,
+  title = {Proceedings of the {{National Peer Review}} on the {{Development}} of {{Technical Guidelines}} for the {{Provision}} of {{Scientific Advice}} on the {{Various Elements}} of {{Fisheries}} and {{Oceans Canada Precautionary Approach Framework}}; {{February}} 28-{{March}} 1, 2012},
+  author = {DFO},
+  year = {2016},
+  journal = {Canadian Science Advisory Secretariat Proceedings Series},
+  volume = {2015/005},
+  pages = {100},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\KT372HJ4\\Proceedings of the National Peer Review on the Dev.pdf}
 }
 
 @techreport{dfoProceedingsNationalWorkshop2013,
@@ -625,7 +644,7 @@
 
 @article{holtbyConservationUnitsPacific2007,
   title = {Conservation {{Units}} for {{Pacific Salmon}} under the {{Wild Salmon Policy}}},
-  author = {Holtby, L. Blair and Ciruna, Kristine  A.},
+  author = {Holtby, L. Blair and Ciruna, Kristine A.},
   year = {2007},
   journal = {DFO Canadian Science Advisory Secretariat Research Document},
   volume = {2007/070},
@@ -747,7 +766,7 @@
 
 @article{keithPopulationDynamicsMarine2012,
   title = {Population Dynamics of Marine Fishes at Low Abundance},
-  author = {Keith, David M. and Hutchings, Jeffrey A.},
+  author = {Keith, David M. and Hutchings, Jeffrey~A.},
   editor = {Hilborn, Ray},
   year = {2012},
   month = jul,
@@ -989,6 +1008,26 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\XJ9S3WXK\\O’Leary et al. - 2020 - Comparison of multiple approaches to calculate tim.pdf}
 }
 
+@article{pacificsalmoncommissionChapterPerformanceEvaluation2016,
+  title = {Chapter 3 Performance Evaluation Report. {{Pacific Salmon Commission Report}}},
+  author = {Pacific Salmon Commission,},
+  year = {2016},
+  journal = {TCCHINOOK (16)-2, Vancouver, BC.},
+  pages = {135},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\QTQ6KUNN\\PACIFIC SALMON COMMISSION.pdf}
+}
+
+@article{pacificsalmoncommissionPacificSalmonCommission2018,
+  title = {Pacific {{Salmon Commission Sentinel Stocks Committee Final Report}} 2009-2014},
+  author = {Pacific Salmon Commission,},
+  year = {2018},
+  journal = {Pacific Salmon Commission Technical Report No. 39, Vancouver, BC},
+  pages = {180},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\4C6FPDMI\\Street - PACIFIC SALMON COMMISSION.pdf}
+}
+
 @techreport{pacificsalmonfoundationMethodsAssessingStatus2020,
   title = {Methods for {{Assessing Status}} and {{Trends}} in {{Pacific Salmon Conservation Units}} and Their {{Freshwater Habitats}}},
   author = {Pacific Salmon Foundation,},
@@ -1007,6 +1046,18 @@
   abstract = {Fisheries and Oceans Canada requires escapement goals for Chinook salmon (Oncorhynchus tshawytscha) stocks to evaluate their status and achieve objectives established by international agreements and domestic policy. Unfortunately the data typically needed to establish these `goals', using stock-recruitment techniques, are expensive to gather and are, for most stocks, lacking. This prompted us to develop the habitat-based approach to generate escapement goals described in this report. We related productive capacity to freshwater habitat area based on results from a meta-analysis of 25 Chinook stocks. Stocks were distributed between central Alaska and northern Oregon and represented a broad range of environments and life history. We developed an allometric model that predicted Smsy and Srep (spawners required to produced maximum sustained yield and replacement, respectively) from the watershed area and assessed the model's performance. The model adequately predicted the Smsy and Srep for an independent data source and out-performed a current interim method applied to British Columbia (BC) Key Streams. The habitat-based approach adequately predicted Smsy and Srep for seven case study examples, although it overestimated the productive capacity of stocks with relatively small spawning areas. Our habitat-based model can generate biologically-based escapement goals, rooted in fish-production relationships, for data limited stocks over a broad range of environments. This simple approach requires easily acquirable data and makes few assumptions. However, spawner escapements of known accuracy and reliability are required, which may impede implementation for some systems. The approach is well-suited for most data limited stocks in BC and can be tested and refined as new stock-recruitment data become available. Since the habitat-based method was more accurate than the interim method for BC Key Streams, we recommend applying it for data limited stocks in BC to establish escapement goals until more stock-specific data are available.}
 }
 
+@article{parkenIncorporatingUncertaintyArea2003,
+  title = {Incorporating {{Uncertainty}} into {{Area}}-under-the-{{Curve}} and {{Peak Count Salmon Escapement Estimation}}},
+  author = {Parken, Charles K and Bailey, Richard E and Irvine, James R},
+  year = {2003},
+  journal = {North American Journal of Fisheries Management},
+  volume = {23},
+  pages = {78--90},
+  abstract = {Uncertainty can be incorporated into area-under-the-curve (AUC) and peak count estimates of salmon escapement by conducting replicate fish counts and developing independent escapement estimates over several years. We describe a bootstrap procedure that follows the trapezoidal AUC method and incorporates the uncertainty associated with fish counts, the shape of the spawner curve, observer efficiency, and residence time. However, the procedure does not incorporate all sources of uncertainty or address the problems posed by sparse surveys or nonzero first or last counts. For the peak count method, the procedure was modified to include the uncertainty from fish counts, observer efficiency, the expansion factor, and the timing of scheduled flights with respect to peak spawning activity. Data from spring-run, stream-type chinook salmon Oncorhynchus tshawytscha in the Nicola River, British Columbia, were used to demonstrate the procedures' applications. Replicate aerial spawner counts were similar and repeatable, and annual residence times were consistent over 4 years. The AUC escapement estimates were precise, reliable, and accurate when compared with independent mark\textendash recapture escapement estimates, whereas the peak count escapement estimates were precise but less reliable and accurate. We expect that AUC escapement estimates calculated from the mean residence time of 4 years will be less biased (Ϫ8\% to ϩ5\%) than peak count estimates from the mean expansion factor of 4 years (Ϫ14\% to ϩ21\%). The procedures that we describe for incorporating uncertainty into AUC and peak count escapement estimation should enable fisheries biologists to more adequately assess changes in abundance and stock status.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\GZFHAZX9\\Parken et al. - Incorporating Uncertainty into Area‐under‐the‐Curv.pdf}
+}
+
 @article{peacockEvaluatingConsequencesCommon2020,
   title = {Evaluating the Consequences of Common Assumptions in Run Reconstructions on {{Pacific}} Salmon Biological Status Assessments},
   author = {Peacock, Stephanie J and Hertz, Eric and Holt, Carrie A and Connors, Brendan and Freshwater, Cameron and Connors, Katrina},
@@ -1020,7 +1071,7 @@
 
 @article{peacockMetricsSamplingDesigns2012,
   title = {Metrics and Sampling Designs for Detecting Trends in the Distribution of Spawning {{Pacific}} Salmon ( {{{\emph{Oncorhynchus}}}} Spp.)},
-  author = {Peacock, Stephanie J. and Holt, Carrie A.},
+  author = {Peacock, Stephanie~J. and Holt, Carrie~A.},
   editor = {Fleming, Ian},
   year = {2012},
   month = apr,
@@ -1274,6 +1325,18 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\AMR4H3FQ\\Shelton and Rice - Limits to overfishing reference points in the con.pdf}
 }
 
+@article{smithTechnicalGuidelinesProvision2012,
+  title = {Technical {{Guidelines}} for the {{Provision}} of {{Scientific Advice}} on the {{Precautionary Approach}} for {{Canadian Fish Stocks}}: {{Section}} 7 - {{Invertebrate Species}}},
+  author = {Smith, S J and Bourdages, H and Choi, J and Dawe, E and Dunham, J S and Gendron, L and Hardie, D and Moriyasu, M and Orr, D and Roddick, D and Rutherford, D and {Sainte-Marie}, B and Savard, L and Shelton, P and Stansbury, D and Tremblay, M J and Zhang, Z},
+  year = {2012},
+  journal = {Canadian Science Advisory Secretariat Research Document},
+  volume = {2012/117},
+  pages = {34},
+  abstract = {This report summarizes progress to date on the development of reference points for the management of various marine invertebrate species commercially harvested in Canada. The implementation of the precautionary approach (PA) to fisheries management in Canada requires the definition of reference points reflecting the productivity and reproductive capacity of a stock. The different invertebrate species commonly fished in Canada exhibit a very diverse range of life history characteristics. For these species, reproductive success will be a function of life history factors such as effective female fecundity, spawning opportunities for females, spatial patterns of age\textendash size structure, the relationship between spawner density and fertilization success \textemdash{} especially for broadcast spawners with sedentary or sessile adults, spatial and temporal aspects of breeding areas, and the relationship between benthic settlement success and habitat suitability. For many species the time period between spawning and actually being able to observe recruits may be long enough so that cumulative environmental influences on survival could radically reduce year-class strength. Also, there is often a mismatch between managed areas and stock area so that recruitment success in one area may be affected by spawning success in another area. The lack of adequate models to account for these complexities has often resulted in the use of empirical methods to define the type of reference points expected by the DFO PA policy. To date, empirical methods have used either an estimate of or an indicator of population biomass or abundance to represent the productivity of the stock. Given that biomass alone is an incomplete measure of productivity, many invertebrate stock assessments rely on secondary indicators such as population size, composition-based and sex ratio-based growth changes, spawner abundance or biomass, abundance of prerecruits, predator abundance, environmental changes and spatial patterns of density, to modify stock status advice. For many sedentary species (e.g., bivalves and echinoderms), primarily spatially-based limits and targets for fisheries may be more appropriate. However, methods for spatial approaches still need to be developed.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\JDINJYXH\\Smith et al. - Technical Guidelines for the Provision of Scientif.pdf}
+}
+
 @article{stalbergCanadaPolicyConservation2009,
   title = {Canada's {{Policy}} for {{Conservation}} of {{Wild Pacific Salmon}}: {{Stream}}, {{Lake}}, and {{Estuarine Habitat Indicators}}},
   author = {Stalberg, H C and Lauzier, R B and MacIsaac, E A and Porter, M and Murray, C},
@@ -1339,7 +1402,7 @@
 }
 
 @misc{TreatyGovernmentCanada2019,
-  title = {Treaty {{Between}} the {{Government}} of {{Canada}} and Athe {{Government}} of the {{United States}} of {{America Concerning Pacific Salmon}}},
+  title = {Treaty {{Between}} the {{Government}} of {{Canada}} and the {{Government}} of the {{United States}} of {{America Concerning Pacific Salmon}}},
   year = {2019},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\H83SR2AU\\Pacific-Salmon-Treaty2019.pdf}
 }
