--- a/caseStudyWP/04-chap4.Rmd
+++ b/caseStudyWP/04-chap4.Rmd
@@ -14,7 +14,7 @@ output:
 
 <!-- LW comment: there are 8 labeled inlets in Fig 22, but Esparanza and Nootka are grouped together in Table 6 and the text refers to 7 inlets. Why are Nootka and Esperanza grouped? -->
 
-The West Coast of Vancouver Island (WCVI) Chinook SMU is comprised of 3 CUs [@holtbyConservationUnitsPacific2007], 7 large inlets (or sounds), and 20 indicators stocks, which are stocks with relatively complete time-series and consistent observation methodology [Figure \@ref(fig:chinook-map), Table \@ref(tab:chinook-Overview), @riddellReview2001Chinook2002]. Hatcheries produce a relatively large component of the total production in many of these stocks, where they help achieve harvest, conservation and assessment objectives. However, they are also considered a risk factor for the long-term sustainability of CUs because they can<!--removed 'also', redundant with first also in sentence--> reduce wild genetic diversity [@withlerGeneticallyBasedTargets2018]. As described in Holt et al. (in review<!-- elsewhere this is 'in prep'-->), only indicator stocks without significant enhancement, i.e.,  stocks with Proportionate Natural Influence, PNI, values $\geqslant$ 0.5<!--suggest putting parantheses or dashes around this clause starting with i.e.--> were included. Most fish are natural origin in these populations, though the of 'wild' fish, second generation natural-origin fish may be in the minority [@withlerGeneticallyBasedTargets2018]. 
+The West Coast of Vancouver Island (WCVI) Chinook SMU is comprised of 3 CUs [@holtbyConservationUnitsPacific2007; @pacificsalmoncommissionPacificSalmonCommission2018], 7 large inlets (or sounds), and 20 indicators stocks, which are stocks with relatively complete time-series and consistent observation methodology [Figure \@ref(fig:chinook-map), Table \@ref(tab:chinook-Overview), @riddellReview2001Chinook2002]. Hatcheries produce a relatively large component of the total production in many of these stocks, where they help achieve harvest, conservation and assessment objectives. However, they are also considered a risk factor for the long-term sustainability of CUs because they can reduce wild genetic diversity and fitness [@withlerGeneticallyBasedTargets2018]. As described in Holt et al. (in review), only escapement indicator stocks without significant enhancement (i.e., stocks with Proportionate Natural Influence, PNI, values $\geqslant$ 0.5) were included. Most fish are natural origin in these populations, though the number of 'wild' fish, second generation natural-origin fish may be in the minority [@withlerGeneticallyBasedTargets2018]. <!--CH: Chuck asked for pHOScensus values which would include out-of-basin strays. I don't have those data, but we could ask SEP/Area staff if necessary-->
 
 
 ```{r chinook-map, fig.cap="Map of the WCVI Chinook SMU, component CUs (coloured red, blue, and yellow), and inlets (labelled in black).", warning=FALSE, echo=FALSE, fig.align="center"}
@@ -68,14 +68,14 @@ Table: (\#tab:chinook-Overview) Overview of WCVI Chinook Stock Management Unit. 
  -->
 
 
-This SMU was included as a case study to demonstrate the development of LRPs under data limitations when recruitment data are not available for deriving stock-recruitment based benchmarks, but habitat-based benchmarks exist, as is the case for Chinook Salmon in BC. WCVI Chinook is also included in the proposed first batch of major stocks for regulation under the Fish Stock provisions, necessitating the development of LRPs for this SMU. WCVI Chinook is also highly enhanced yet does not have data on the proportion of hatchery-origin spawners contributing to total production, similar to many other Chinook Salmon SMUs. Furthermore, this SMU was unique among the case studies in the consideration of inlets within CUs demonstrating various spatial scales that can be integrated into SMU-level assessments. 
+This SMU was included as a case study to demonstrate the development of LRPs under data limitations when recruitment data are not available for deriving stock-recruitment based benchmarks, but habitat-based benchmarks exist, as is the case for Chinook Salmon in BC. WCVI Chinook is also included in the proposed first batch of major stocks for regulation under the Fish Stock provisions, necessitating the development of LRPs for this SMU. WCVI Chinook is also highly enhanced yet does not have data on the proportion of hatchery-origin spawners contributing to total production, similar to many other Chinook Salmon SMUs. Furthermore, this SMU was unique among the case studies in the consideration of inlets within CUs in lieu of subpopulations, demonstrating various spatial scales that can be integrated into SMU-level assessments. 
 
-Most Chinook in this SMU are 'ocean type', entering the ocean 1-3 months after emergence from spawning gravel [@dfoAssessmentWestCoast2012a]. 'Stream type' fish, those that stay in the river for one year after emergence, are rare. After entering the ocean, WCVI Chinook migrate into northern BC and southeast Alaska waters to rear for 2 to 7 years, returning to spawn predominantly at ages 4 and 5 [@dfoAssessmentWestCoast2012a].
+Virtually all Chinook in this SMU are 'ocean type', entering the ocean 1-3 months after emergence from spawning gravel [@dfoAssessmentWestCoast2012a]. 'Stream type' fish, those that stay in the river for one year after emergence, are rare. After entering the ocean, WCVI Chinook migrate into northern BC and southeast Alaska waters to rear for 2 to 6 years, returning to spawn predominantly at ages 3, 4 and 5 [@dfoAssessmentWestCoast2012a].
 
 
-We considered the 4 criteria identified in Holt et al. (in review) to evaluate if status of any one CU within this SMU could be inferred from the remaining CUs. Several dominant threats are similar across the 3 WCVI CUs. Large-scale hatcheries operating within all three CUs have resulted in genetic risks from introgression [@cosewicCOSEWICAssessmentStatus2020]. Also, straying from hatchery-influenced populations likely compromises the genetic composition of spawners across WCVI.  Landslides and sedimentation from forestry impact spawning habitat across WCVI. However, unique to West Vancouver Island-South is the relatively large number of aquaculture facilities for Atlantic salmon<!--capitalize?--> in nearshore habitat used by Chinook Salmon, which poses a threat to this CU [@cosewicCOSEWICAssessmentStatus2020]. Also unique to West Vancouver Island-Nootka and Kyuquot are threats from tourism (~100 lodges located in important areas of Chinook Salmon rearing) and industrial effluents from pulp mills [@cosewicCOSEWICAssessmentStatus2020].
+We considered the 4 criteria identified in Holt et al. (in review) to evaluate if status of any one CU within this SMU could be inferred from the remaining CUs. Several dominant threats are similar across the 3 WCVI CUs. Large-scale hatcheries operating within all three CUs have resulted in genetic risks from introgression [@cosewicCOSEWICAssessmentStatus2020]. Also, straying from hatchery-influenced populations likely compromises the genetic composition of spawners across WCVI.  Landslides and sedimentation from forestry impact spawning habitat quality and quantity across WCVI. However, unique to West Vancouver Island-South is the relatively large number of aquaculture facilities for Atlantic salmon in nearshore habitat used by Chinook Salmon, which poses a threat to this CU [@cosewicCOSEWICAssessmentStatus2020]. Also unique to West Vancouver Island-Nootka and Kyuquot are threats from recreational fisheries (~100 lodges located in important areas of Chinook Salmon rearing) and industrial effluents from pulp mills [@cosewicCOSEWICAssessmentStatus2020].
 
-All three CUs likely experience similar freshwater environmental conditions being part of the same Freshwater Adaptive Zone, West Vancouver Island, characterized by very high annual water flow, relatively warm temperatures, low wetland influence, and low alpine cold water and glacial influences [@holtbyConservationUnitsPacific2007]. Spawning habitats for all three CUs are primarily within the Coastal Western Hemlock biogeoclimatic zone. However, the marine environment experienced by juveniles from the West Vancouver Island-Nootka and Kyuoquot and West Vancouver Island-South CUs differs from that of the West Vancouver Island North CU to the north [@holtbyConservationUnitsPacific2007]. The two southern CUs are influenced by the Juan de Fuca Strait which determines food chain productivity in nearshore environment. For the northern CU,  nearshore marine environment is influenced primarily by the northward flowing coastal current in the North Pacific ocean [@cosewicCOSEWICAssessmentStatus2020].
+All three CUs likely experience similar freshwater environmental conditions being part of the same Freshwater Adaptive Zone, West Vancouver Island, characterized by very high river discharge, low wetland influence, and low alpine cold water and glacial influences [@holtbyConservationUnitsPacific2007]. Spawning habitats for all three CUs are primarily within the Coastal Western Hemlock biogeoclimatic zone. However, the marine environment experienced by juveniles from the West Vancouver Island-Nootka and Kyuoquot and West Vancouver Island-South CUs differs from that of the West Vancouver Island North CU to the north [@holtbyConservationUnitsPacific2007]. The two southern CUs are influenced by the Juan de Fuca Strait which affects food chain productivity in nearshore environments. For the northern CU, the nearshore marine environment is influenced primarily by the northward flowing coastal current in the North Pacific ocean [@cosewicCOSEWICAssessmentStatus2020].
  
 The average generation time is consistent across all three CUs, and they exhibit <!--the?--> ocean-type life-history variant and full<!--fall?--> run timing.  Absolute abundances are not available for these CUs [@brown2020SummaryAbundance2020]. <!--CH note: watershed-area estimate of population capacity for indicator stocks only as well, so are not absolute habitat capacities-->
 
@@ -86,10 +86,10 @@ Based on differences in threats and the coastal marine environment, we suggest t
 Two of the three CUs in this SMU, West Vancouver Island-South and West Vancouver Island-Nootka & Kyuquot, were assessed as 'red' status in an integrated Wild Salmon Policy assessment [@dfoIntegratedBiologicalStatus2016]. For these CUs, assessments were based on component stocks without hatchery enhancement within the most recent 12 years, omitting stocks with enhancement during that period. For West Vancouver Island-South, red status was based primarily on threats of genetic introgression from strays from nearby large-scale hatcheries. For West Vancouver Island-Nootka & Kyuoquot, red status was based on a very low index of abundance for non-enhanced populations and threats of genetic introgression from strays from large-scale hatcheries. The third CU, West Vancouver Island-North, was not assessed by DFO in 2016 because the indicator site for this CU was enhanced over the most recent 12 years (other metrics of hatchery enhancement, e.g., Proportionate Natural Influence or PNI were not considered). A list of indicator and non-indicator stocks within each CU is available in @brown2020SummaryAbundance2020. 
 
 
-WCVI Chinook was identified as a stock of concern in the 2021 Integrated Fisheries Management Plan, IFMP, for South Coast Salmon, and a rebuilding plan is under development [@dfoIntegratedFisheriesManagement2021]. Poor marine survival rates for WCVI Chinook and low spawner levels over the past 2 decades are highlighted as reasons for conservation concern in the IFMP [@dfoIntegratedFisheriesManagement2021, p. 129]. A variety of management measures have been implemented to restrict harvest on WCVI Chinook and address these concerns, described in the IFMP [@dfoIntegratedFisheriesManagement2021].
+WCVI Chinook was identified as a stock of concern in the 2021 Integrated Fisheries Management Plan, IFMP, for South Coast Salmon, and a rebuilding plan is under development [@dfoIntegratedFisheriesManagement2021]. Poor smolt-age 2 survival rates for WCVI Chinook and low spawner levels over the past 2 decades are reasons for conservation concern in the IFMP [@dfoIntegratedFisheriesManagement2021, p. 129]. Since the mid 1990s, a variety of management measures have been implemented to restrict harvest on WCVI Chinook and address these concerns, described in the IFMP [@dfoIntegratedFisheriesManagement2021].
 
 
-Previous assessments of Chinook Salmon stocks, including WCVI, have used 'habitat-based' biological benchmarks using an empirical relationship between watershed area and common stock-recruitment biological benchmarks, spawner abundances at replacement, S~REP~, and S~MSY~, from a meta-analysis of 25 Chinook stocks across North America [@parkenHabitatbasedMethodsEstimate2006; @liermannUsingAccessibleWatershed2010]. Lack of rigorous recruitment data for WCVI Chinook stocks has precluded the use of stock-recruitment based benchmarks. 
+Previous assessments of Chinook Salmon stocks, including WCVI, have used 'habitat-based' biological benchmarks using an empirical relationship between watershed area and common stock-recruitment biological benchmarks, spawner abundances at replacement, S~REP~, and S~MSY~, from a meta-analysis of 25 Chinook stocks across North America [@parkenHabitatbasedMethodsEstimate2006; @liermannUsingAccessibleWatershed2010]. Lack of rigorous spawner and recruitment data for WCVI Chinook stocks has precluded the use of stock-recruitment based benchmarks. 
 
 In November 2020, @cosewicCOSEWICAssessmentStatus2020 designated the West Vancouver Island-South and West Vancouver Island-Nootka & Kyuquot at Threatened, and West Vancouver Island-North as data deficient. Threatened statuses were determined primarily from genetic risks of hatcheries enhancement and habitat threats from forestry. West Vancouver Island-North was designated data deficient because it contains only one indicator stock.
 
@@ -99,11 +99,11 @@ In November 2020, @cosewicCOSEWICAssessmentStatus2020 designated the West Vancou
 
 ### Spatial scale
 
-Under Canada's Wild Salmon Policy, CUs are identified at a spatial scale that allows for long-term sustainability of the species [@holtbyConservationUnitsPacific2007]. For WCVI Chinook, inlets nested within CUs are another important spatial scale of diversity for sustainability given geographic separation of spawning habitats among inlets and limited straying among inlets (D. McHugh pers. comm. DFO South Coast Stock Assessment). We used a hybrid approach in which LRPs were developed to preserve inlet-scale diversity within CUs. However, only 5 of the 7 inlets on the west coast of Vancouver Island contained indicator stocks without significant hatchery influence. Both Nitnat and San Juan inlets, which are the two most southern inlets within the WCVI-South CU, have large-scale hatcheries and infrequent monitoring of sites with natural spawning. These two inlets lack indicators without significant hatchery influence.  Because the remaining 5 inlets with significant natural spawning are nested within the 3 WCVI Chinook CUs, preserving this inlet-scale biodiversity will also preserve CU-scale biodiversity required under the Wild Salmon Policy. Future analyses could limit LRP estimation to the scale of CUs or extend it to include all 7 inlets with additional natural indicators for Nitinat and San Juan, if they are developed. 
+Under Canada's Wild Salmon Policy, CUs are identified at a spatial scale that allows for long-term sustainability of the species [@holtbyConservationUnitsPacific2007]. For WCVI Chinook, inlets nested within CUs are another important spatial scale of diversity for sustainability given geographic separation of spawning habitats among inlets and limited straying among inlets (D. McHugh pers. comm. DFO South Coast Stock Assessment). We used a hybrid approach in which LRPs were developed to preserve inlet-scale diversity within CUs. However, only 5 of the 7 inlets on the west coast of Vancouver Island contained indicator stocks without significant hatchery influence. Both Nitnat and San Juan inlets, which are the two most southern inlets within the WCVI-South CU, have large-scale hatcheries and infrequent monitoring of sites with natural spawning. These two inlets lack escapement indicator stocks without significant hatchery influence.  Because the remaining 5 inlets with significant natural spawning are nested within the 3 WCVI Chinook CUs, preserving this inlet-scale biodiversity will also preserve CU-scale biodiversity required under the Wild Salmon Policy. Future analyses could limit LRP estimation to the scale of CUs or extend it to include all 7 inlets with additional natural indicators for Nitinat Lake and San Juan Bay, if they are developed. 
 
 ### Watershed Areas
 
-To derive habitat-based benchmarks, watershed areas were updated for WCVI Chinook using methods described in @parkenHabitatbasedMethodsEstimate2006 by identifying 3\textsuperscript{rd} order watershed areas that contain spawning habitat and omitting areas above obstacles to fish passage from the [Provincial Obstacles to Fish Passage database](https://catalogue.data.gov.bc.ca/dataset/provincial-obstacles-to-fish-passage). Only watershed areas for indicator stocks were included in the current analysis, and these watershed areas were then summed within inlets (Table \@ref(tab:chinook-WA)). As a result, inlet-level benchmarks presented in this case study are on a relative scale; they only represent the abundance of select indicator streams. In future analyses, watershed areas of all known spawning populations could be included (omitting areas above obstacles to fish passage) to derive habitat-based benchmarks on an absolute abundance scale. These benchmarks could be compared against total abundances to each inlet. This approach was not used as in this case study because of large uncertainties in abundances of non-indicator stocks that precluded the development of reliable estimates of total abundance.
+To derive habitat-based benchmarks, watershed areas were updated for WCVI Chinook using methods described in @parkenHabitatbasedMethodsEstimate2006 by identifying 3\textsuperscript{rd} order watershed areas that contain spawning habitat and omitting areas above obstacles to fish passage from the [Provincial Obstacles to Fish Passage database](https://catalogue.data.gov.bc.ca/dataset/provincial-obstacles-to-fish-passage). Only watershed areas for escapement indicator stocks were included in the current analysis, and these watershed areas were then summed within inlets (Table \@ref(tab:chinook-WA)). As a result, inlet-level benchmarks presented in this case study are on a relative scale; they only represent the abundance of select indicator streams. In future analyses, watershed areas of all known spawning populations could be included (omitting areas above obstacles to fish passage) to derive habitat-based benchmarks on an absolute abundance scale. These benchmarks could be compared against total abundances to each inlet. This approach was not used as in this case study because of large uncertainties in abundances of non-indicator stocks that precluded the development of reliable estimates of total abundance.
 <!--LW comment: should the Watershed Area column have the unit in the header (km2)?. The CSAS document formatting instructions have a note about this-->
 
 ```{r chinook-WA, warning=FALSE, echo=FALSE}
@@ -123,13 +123,13 @@ dat <- dat %>% dplyr::filter(Stock != "Cypre") %>%
   # filter(Inlet != "San Juan") %>% filter(Inlet !="Nitinat")
   # dplyr::select(c(Stock, WA)) %>% dplyr::mutate(WA = round(WA,0)) %>%
   # dplyr::rename("Watershed Area" = WA)
-csasdown::csas_table(dat, booktabs = T, caption = "Sum of watershed areas for indicator stocks within inlets, km\\textsuperscript{2}. Only indicator stocks that are not highly enhanced (i.e., PNI > 0.5) are included.")
+csasdown::csas_table(dat, booktabs = T, caption = "Sum of watershed areas for escapement indicator stocks within inlets, km\\textsuperscript{2}. Only indicator stocks that are not highly enhanced (i.e., PNI > 0.5) are included.")
 
  
 ```
 
 ### Spawner Abundances
-Spawner abundances were provided for 20 WCVI indicators stocks (D. Dosbon and D. McHugh pers .comm.; Table \@ref(tab:chinook-Overview); Figure \@ref(fig:chinook-IndTimeSeries)). These time-series are compiled annually by DFO Southcoast Area Staff for local and international assessment and management [e.g., @dfoWCVISalmonBulletin2021]. Missing values were not infilled, which limited the estimation of historical SMU status to years with complete data series.  Although the time-series of some indicators stocks extends back to 1953, others began as late as 1995 limiting our analyses to these recent time-series. <!--CH: I haven't added the numbers of missing values, but they can be seen in the historical status plot -->In future work, infilled time-series of indicator within inlets (or CUs) could be developed to extend the available time-series. Spawner abundances for indicators stocks were estimated based on a combination of snorkel,  boat or aerial surveys, bank walks, and fence counts, which range in accuracy and precision [see @dfoWestCoastVancouver2014 for a summary of monitoring and assessment methods]. Although indicator stocks are chosen in part based on the consistency of the methods applied, spawner estimates from visual surveys are a source of uncertainty for this SMU. Abundances are usually estimated using Area-Under-the-Curve (AUC) or associated maximum likelihood methods. For stocks that are not surveyed continuously over the spawning season, abundances are estimated using peak counts or a combination of observations from multiple surveys, contributing additional uncertainties to abundance estimates. 
+Spawner abundances were provided for 20 WCVI escapement indicators stocks (D. Dosbon and D. McHugh pers .comm.; Table \@ref(tab:chinook-Overview); Figure \@ref(fig:chinook-IndTimeSeries)). These time-series are compiled annually by DFO Southcoast Area Staff for local and international assessment and management [e.g., @dfoWCVISalmonBulletin2021]. Missing values were not infilled, which limited the estimation of historical SMU status to years with complete data series.  Although the time-series of some escapement indicators stocks begin in 1953, others began as late as 1995 limiting our analyses to these recent time-series that are based on a consistent escapement methodology [@pacificsalmoncommissionPacificSalmonCommission201]. <!--CH: I haven't added the numbers of missing values, but they can be seen in the historical status plot -->In future work, infilled time-series of escapement indicator stocks within inlets (or CUs) could be developed to extend the available time-series. Spawner abundances for escapement indicators stocks were estimated from a combination of snorkel,  boat or aerial surveys, bank walks, and fence counts, which range in accuracy and precision [see @dfoWestCoastVancouver2014 for a summary of monitoring and assessment methods]. Although indicator stocks are chosen in part based on the consistency of the methods applied, spawner estimates from visual surveys are a source of uncertainty for this SMU. Abundances are usually estimated using Area-Under-the-Curve (AUC) or associated maximum likelihood methods. For stocks that are not surveyed continuously over the spawning season, abundances are estimated using peak counts or a combination of observations from multiple surveys, contributing additional uncertainties to abundance estimates. 
 
 
 <!--Diana McHugh: Citations for AUC
@@ -143,7 +143,7 @@ Perrin, C. J., and J. R. Irvine. A review of survey life estimates as they apply
 
 The WCVI indicator stocks are all estimated based on periodic snorkel surveys, except for Somass, which has fishways.  Snorkel surveys are better for counting the mixture of species present in Sept and Oct, compared to stream walks.  Area under the curve is used for most years, with the occasional peak count if timing or survey quality cannot support an AUC.  There have been some mark resight and mark recapture studies, but to keep the time series consistent, we have stuck with the AUC method primarily.
 -->
-```{r chinook-IndTimeSeries, fig.cap="Time-series of spawner abundances by indicator stock, in units of 1000s. Dark blue time-series are indicator stocks where most production is from natural spawning and Proportionate Natural Index (PNI) values are generally >= 0.5; light blue time-series are indicator stocks where hatchery producion is dominant, where PNI values are generally < 0.5. Prelminary PNI values are provided in the top right corner of each panel where they are available. See Section on PNI values below for more details.",  warning=FALSE, echo=FALSE, fig.align="center"}
+```{r chinook-IndTimeSeries, fig.cap="Time-series of spawner abundances by escapement indicator stock, in units of 1000s. Dark blue time-series are indicator stocks where most production is from natural spawning and Proportionate Natural Index (PNI) values are generally >= 0.5; light blue time-series are escapeament indicator stocks where hatchery producion is dominant, where PNI values are generally < 0.5 over available time-series. Prelminary PNI values are provided in the top right corner of each panel averaged over the time series, when they are available. See Section on PNI values below for more details.",  warning=FALSE, echo=FALSE, fig.align="center"}
 
 knitr::include_graphics("figure/chinook-IndicatorTimeSeries.png")
 # from Watershed-Area model repository
@@ -152,10 +152,13 @@ knitr::include_graphics("figure/chinook-IndicatorTimeSeries.png")
 
 ### Proportionate Natural Influence, PNI
 
-To evaluate the impact of hatchery production, Proportionate Natural Influence, PNI values for 14 WCVI indicator stocks were provided to DFO South Coast Stock Assessment by DFO's Salmonid Enhancement Program (J. Bokvist, pers. comm. DFO South Coast Salmon Assessment). Stocks were considered significantly enhanced and excluded from our analyses if average PNI values over the available time-series were < 0.5. Thermal marking was used to identify the proportion of hatchery-origin spawners on the spawning grounds to derive PNI values. When data on thermal marking were not available, coded-wire tags (CWTs) were used to identify hatchery-origin spawners. Although Gold River had PNI values > 0.5 (0.52), most of the unmarked spawners are thought to be second generation (or descendants of) hatchery-origin fish from the Robertson Creek hatchery,<!--LW: suggest new sentence: "Thus, Gold River..."--> was excluded from our analyses. Also, although PNI of Artlish was marginally <0.5 (0.46), PNI estimates were only available for one year (2015) using CWTs, which was deemed to be unrepresentative of this stock which is relatively unenhanced. Five of the remaining 6 indicator stocks without PNI data are not thought to be significantly enhanced: Cayeghle, Kaouk, Megin, Moyeha and Tasish (D. McHugh, pers. comm., DFO South Coast Stock Assessment). One indicator stock without PNI data, Tranquil, was considered significantly enhanced and was grouped with the PNI <0.5 stocks (D. McHugh, pers. comm., DFO South Coast Stock Assessment). Guidelines and methods for estimating PNI values are currently being documented by DFO's Salmonid Enhancement Program. Uncertainties in PNI values stem from low sample sizes to estimate proportion hatchery-origin spawners, large uncertainties from CWT estimates of hatchery-origin spawners, and assumptions required to estimate proportion natural-origin brood stock. 
+To evaluate the component of hatchery production, Proportionate Natural Influence, PNI values for 14 WCVI indicator stocks were provided to DFO South Coast Stock Assessment by DFO's Salmonid Enhancement Program (J. Bokvist, pers. comm. DFO South Coast Salmon Assessment). Stocks were considered significantly enhanced and excluded from our analyses if average PNI values over the available time-series where hatchery objectives have remained constant were < 0.5.  Thermal marking was used to identify the proportion of hatchery-origin spawners on the spawning grounds to derive PNI values. When data on thermal marking were not available, coded-wire tags (CWTs) were used to identify hatchery-origin spawners. <!--CH: Chuck asked that we formalize our guidance on estimating PNI I think referring to these previous 2 sentences?? (not sure exactly), I have adapt this sentence for the Guidelines paper ch1 "We recommend that thermal marking be used..."--> Although Gold River had PNI values > 0.5 (0.52), most of the unmarked spawners are thought to be second generation (or descendants of) hatchery-origin fish from the Robertson Creek hatchery. Thus,Gold River was excluded from our analyses. Also, although PNI of Artlish was marginally <0.5 (0.46), PNI estimates were only available for one year (2015) using CWTs, which was deemed to be unrepresentative of this stock which is relatively unenhanced. Five of the remaining 6 escapement indicator stocks without PNI data are not thought to be significantly enhanced: Cayeghle, Kaouk, Megin, Moyeha and Tasish (D. McHugh, pers. comm., DFO South Coast Stock Assessment). One escapement indicator stock without PNI data, Tranquil, was considered significantly enhanced and was grouped with the PNI <0.5 stocks (D. McHugh, pers. comm., DFO South Coast Stock Assessment). 
 
+We initially considered a stricter definition of hatchery enhancement that included only populations with PNI values $\geqslant$ 0.72. This stricter threshold resulted in excluding most data since reliable time-series of PNI values and spawner abundances are only available for exploitation-rate indicator populations where coded-wire tags have been applied and sampled for recoveries, which on the WCVI tend to be populations with hatcheries. The threshold of $\geqslant$ 0.5, a level associated with most fish being natural origin, accounts for the trade-off between assessing CU-level biodiversity and excluding significant hatchery impacts. 
 
-Because current and historical times-series of the proportion of hatchery-origin spawners were not consistently available for stocks with PNI $\geqslant$ 0.5, total spawner abundances (i.e., combined natural- and hatchery-origin spawners) were used in the assessment of CU and aggregate SMU level statuses. This may results in overly optimistic assessments of status relative to if hatchery-origin fish were excluded (as in Interior Fraser River Coho case study).  We recommend the collection of data to estimate the contribution of hatchery-origin spawners to total production for these indicator stocks. The inclusion of hatchery-origin fish in estimates of status is a key source of uncertainty for this SMU.
+Guidelines and methods for estimating PNI values are currently being documented by DFO's Salmonid Enhancement Program. Uncertainties in PNI values stem from low sample sizes on the spawning grounds to estimate proportion hatchery-origin spawners, large uncertainties from CWT estimates of hatchery-origin spawners due to insufficient marking of hatchery production, and lack of data on proportions of natural-origin brood stock (and assumption that proportions of natural-origin brood stock equal proportions of natural-origin spawners). 
+
+Because current and historical times-series of the proportion of hatchery-origin spawners were not consistently available for stocks with PNI $\geqslant$ 0.5, total spawner abundances (i.e., combined natural- and hatchery-origin spawners) were used in the assessment of CU and aggregate SMU level statuses. This may results in overly optimistic assessments of status relative to situations where hatchery-origin fish were excluded (as in Interior Fraser River Coho case study).  We recommend the design of hatchery marking and spawning ground sampling programs to collect data to estimate the contribution of hatchery-origin spawners to total production for these escapement indicator stocks. The inclusion of hatchery-origin fish in estimates of status is a key source of uncertainty for this SMU, and likely many others in Pacific Region.
 
 <!--KH: To think about for guidelines paper: are we recommending average PNI > 0.5 over the available time series as a threshold for including in LRP calculations?  If so, do we have advice about how to deal with trends in PNI over time? When looking at the Interior Fraser Chinook data way back when, I seem to recall that PNI was variable over time for several of those streams.  
 
@@ -168,7 +171,7 @@ CH: my initial thinking would be remove time-periods where PNI is very high from
 <!--CH: Mention caveat about northern CU/inlet being DD possibly?-->
 
 
-Inlet status was derived by applying the multidimensional approach used within the Pacific Salmon Status Scanner to individual inlets (Pestal et al., in prep). We found that the status using this method was equivalent to status on a single metric, abundance relative to a lower benchmark S~gen~ for all inlets, because abundances were only available on a relative scale (only indicator stocks are monitored consistently); absolute numbers were not available (as shown in Figure \@ref(fig:decision-tree))<!--LW: suggest making previous sentence into two sentences, phrasing is awkward-->. Because the results were the same, we present a single set of analyses and results, labeled as the single metric (which also represents multidimensional status in this case). Holt et al. (in review) recommends applying the Salmon Scanner to derive CU-level status.
+Inlet status was derived by applying the multidimensional approach used within the Pacific Salmon Status Scanner to individual inlets (Pestal et al., in prep). We found that the status using this method was equivalent to status on a single metric, abundance relative to a lower benchmark S~gen~ for all inlets, because abundances were only available on a relative scale (only indicator stocks are monitored consistently); absolute numbers were not available (as shown in Figure \@ref(fig:decision-tree))<!--LW: suggest making previous sentence into two sentences, phrasing is awkward-->. Because the results were the same, we present a single set of analyses and results, labeled as the single metric (which also represents multidimensional status in this case). Holt et al. (in review) recommend applying the Salmon Scanner to derive CU-level status.
 
 <!--LW: suggest changing following sentence to:
 S~gen~ is the spawner abundance required to achieve S~MSY~ within one generation without fishing under equilibrium conditions, and is the lower benchmark on abundances applied under the WSP. We derived S~gen~ by optimizing the Ricker equation with recruitment set to S~MSY~ (equation \@ref(eq:Sgen) repeated again here for transparency):
@@ -196,7 +199,7 @@ where, <!-- comma seems unnecessary here?-->
 
 and $a$ is recruits-per-spawner at low productivity. Maximum likelihood estimates of S~REP~ values (and 95% CIs) were derived from the watershed-area model adapted from @parkenHabitatbasedMethodsEstimate2006, that included hierarchical structure in the underlying meta-analysis accounting for similarities in productivity among ocean-type and stream-type fish [@liermannUsingAccessibleWatershed2010, Table \@ref(tab:chinook-benchmarks)]. <!--CH: Add when developed (Appendix \@ref(), link to code in Appendix \@ref(github-appendix)). -->  <!--KH: Note that I have included a link the this appendix in the chapter 2 overview, where I mention that code for all case studies is in the appendix. So, it may not be necessary to include in each case study individually?-->
 
-Ricker $a$ values were approximated for WCVI Chinook from a life-stage model that partitioned survival across freshwater and marine life-stages for ocean-type Chinook based on empirical data and expert opinion. Life-stage specific survival rates were then combined to derive an overall survival from spawners to recruitment (W. Luedke pers. comm. DFO South Coast Stock Assessment). Despite the relatively large uncertainties in the life-stage specific survival rates, this approach provides an approximation for productivity that is more realistic than the high estimate previously derived from the watershed-area model [>7 recruits/spawner, @parkenHabitatbasedMethodsEstimate2006].  From the life-stage model, mean $\log(a)$ was estimated at ~ 1 (~$a$=2.72 recruits/spawner<!--LW: can this be simplified to $a$~2.72 recruits/spawner?-->), with standard errors (1.96 SDs) +/- 0.5 ($a$ ranging from 1.6 to 4.5), representing relatively large uncertainty in productivity. <!--CH Q: do you think I need to mention this? "We assumed these parameter distribution represented expected productivity, and so log-normal bias corrections were not applied."  
+Ricker $a$ values were approximated for WCVI Chinook from a life-stage model that partitioned survival across freshwater and marine life-stages for ocean-type Chinook based on empirical data and expert opinion. Life-stage specific survival rates were then combined to derive an overall survival from spawners to recruitment (W. Luedke pers. comm. DFO South Coast Stock Assessment). Despite the relatively large uncertainties in the life-stage specific survival rates, this approach provides an approximation for productivity that is more realistic than the high estimate previously derived from the watershed-area model and reported for many other ocean-type Chinook stocks  [>7 recruits/spawner, @parkenHabitatbasedMethodsEstimate2006].  From the life-stage model, mean $\log(a)$ was estimated at ~ 1 (~$a$=2.72 recruits/spawner<!--LW: can this be simplified to $a$~2.72 recruits/spawner?-->), with standard errors (1.96 SDs) +/- 0.5 ($a$ ranging from 1.6 to 4.5), representing relatively large uncertainty in productivity. <!--CH Q: do you think I need to mention this? "We assumed these parameter distribution represented expected productivity, and so log-normal bias corrections were not applied."  
 KH: As discussed via teams, I agree with leaving mention of the bias correction out.
 -->
 
